--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,7 @@
 }
 
 html, body {
+  background: var(--overscroll-background);
   min-height: 100%;
   font-family: "Optimistic Display", system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
