--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,6 +144,7 @@ select {
   border-radius: 6px;
   padding: 6px 12px;
   font-size: 13px;
+  font-weight: 300;
   line-height: 1.5;
   color: #fff;
   background: #000;
