optimize `/check` endpoint, self-host fonts

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Optimistic Display";
-  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayLight-199be98cf48e5b4c688356b08a02362c.woff2")
+  src: url("/fonts/Optimistic-Display-Light.woff2")
   format("woff2");
   font-weight: 300;
   font-style: normal;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Optimistic Display";
-  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayRegular-b0e4e99f91efd0021c3ab8e4df0e6e1b.woff2")
+  src: url("/fonts/Optimistic-Display-Regular.woff2")
   format("woff2");
   font-weight: 500;
   font-style: normal;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "Optimistic Display";
-  src: url("https://facebookmicrosites.github.io/design/public/fonts/OptimisticDisplayBold-3a50548145f36de582c3b36d9626f4d6.woff2")
+  src: url("/fonts/Optimistic-Display-Bold.woff2")
   format("woff2");
   font-weight: 700;
   font-style: normal;
