tweaks for README handling and render, code cleanup

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -234,6 +234,14 @@ select {
     margin-bottom: 0;
   }
 
+  section {
+    margin-top: 18px;
+  }
+
+  section + img {
+    margin-top: 18px;
+  }
+
   p, h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0;
     text-align: left;
