remove hover gallery, tweaks and fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,7 +238,7 @@ select {
     margin-top: 18px;
   }
 
-  section + img, blockquote + img {
+  section + img, blockquote + img, pre + img {
     margin-top: 12px;
   }
 
