--- a/styles/styles.css
+++ b/styles/styles.css
@@ -227,7 +227,52 @@ select {
   }
 }
 
+/* THREE DOTS LOADER */
+
+#dots-loader {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 6px;
+
+  .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    display: inline-block;
+    animation: dots-bounce 1.2s infinite ease-in-out both;
+    opacity: 0.9;
+
+    &:nth-child(1) {
+      animation-delay: 0s;
+    }
+
+    &:nth-child(2) {
+      animation-delay: calc(1.2s / 6);
+    }
+
+    &:nth-child(3) {
+      animation-delay: calc(1.2s * 2 / 6);
+    }
+  }
+}
+
+@keyframes dots-bounce {
+  0%,
+  80%,
+  100% {
+    transform: scale(0);
+    opacity: 0.4;
+  }
+  40% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 /* README WRAPPER */
+
 #readmeMarkdownContainer {
   font-size: 90%;
   line-height: 1.4;
@@ -261,6 +306,10 @@ select {
 
     & img {
       display: block;
+    }
+
+    + div {
+      margin-top: 12px;
     }
   }
 
