author box fix, README rendering corrections

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -308,6 +308,10 @@ select {
       display: block;
     }
 
+    &[align="center"] img {
+      margin: 0 auto;
+    }
+
     + div {
       margin-top: 12px;
     }
