colors tweaks and UI fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,7 @@
 
   --secondary: #a2a7ab;
   --accented: #2a2e36;
-  --icon: var(--secondary);
+  --icon: var(--pewter);
 
   --warning: #9a810c;
   --warning-light: #2f2704;
