implement sever and client side caching, few other tweaks

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@
   --primary-dark: #39bee2;
   --primary-darker: #2e9ab8;
   --primary-hover: #61dafb16;
+  --primary-active-hover: #61dafb24;
 
   --powder: #eefafe;
   --pewter: #bec8cb;
