--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,6 +62,7 @@
 
   --background: #ffffff;
   --border: var(--gray-2);
+  --border-secondary: #353840;
 
   --overscroll-background: var(--gray-7);
   --outline: var(--primary-dark);
@@ -92,11 +93,12 @@
   --icon: var(--pewter);
   --hover: var(--gray-3);
 
-  --warning: #9a810c;
-  --warning-light: #2f2704;
+  --warning: #9a720c;
+  --warning-light: #2f2304;
 
   --background: #19191f;
   --border: var(--accented);
+  --border-secondary: var(--secondary);
 
   --overscroll-background: var(--very-dark);
   --outline: var(--primary-dark);
